[package]
name = "bevy_gltf_export"
version = "0.1.0"
edition = "2021"
authors = ["Luca Della Vedova <lucadv@intrinsic.ai>"]
license = "Apache-2.0"
description = "Export bevy meshes into gltf scenes"
readme = "README.md"
repository = "https://github.com/open-rmf/bevy_gltf_export"
keywords = ["export", "gltf", "glb", "bevy"]
categories = [
  "game-development",
]
# Generated test files
exclude = ["*.glb"]

[dependencies]
bevy_asset = "0.16.0"
bevy_color = "0.16.0"
bevy_image = "0.16.0"
bevy_pbr = "0.16.0"
bevy_render = "0.16.0"
bevy_transform = "0.16.0"

# Note, keep this in track with the upstream bevy_gltf dependency
gltf = { version = "1.3.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_unlit",
    "extras",
    "names",
    "utils",
] }
gltf-json = "1.3.0"
thiserror = "1.0"
image = { version = "0.25", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
